# ChangeLog for games-strategy/freeciv
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.87 2009/03/21 17:09:30 armin76 Exp $

  21 Mar 2009; Raúl Porcel <armin76@gentoo.org> freeciv-2.1.8.ebuild:
  x86 stable, bug #261797

  18 Mar 2009; Brent Baude <ranger@gentoo.org> freeciv-2.1.8.ebuild:
  stable ppc, bug 261797

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> freeciv-2.1.8.ebuild:
  Stable on alpha, bug #261797 (this time for real)

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Keyworded on alpha, bug #261797

  15 Mar 2009; Brent Baude <ranger@gentoo.org> freeciv-2.1.8.ebuild:
  stable ppc64, bug 261797

  11 Mar 2009; Richard Freeman <rich0@gentoo.org> freeciv-2.1.8.ebuild:
  amd64 stable - 261797

  09 Mar 2009; Ferris McCormick <fmccor@gentoo.org> freeciv-2.1.8.ebuild:
  Sparc stable, Bug #261797.

*freeciv-2.1.8 (02 Jan 2009)

  02 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +freeciv-2.1.8.ebuild:
  version bump

  30 Aug 2008; Brent Baude <ranger@gentoo.org> freeciv-2.1.5.ebuild:
  stable ppc, bug 234507

*freeciv-2.1.6 (29 Aug 2008)

  29 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +freeciv-2.1.6.ebuild:
  version bump

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> freeciv-2.1.5.ebuild:
  Stable on ppc64; bug #234507

  12 Aug 2008; Kenneth Prugh <ken69267@gentoo.org> freeciv-2.1.5.ebuild:
  amd64 stable, bug #234507

  12 Aug 2008; Tobias Klausmann <klausman@gentoo.org> freeciv-2.1.5.ebuild:
  Stable on alpha, bug #234507

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> freeciv-2.1.5.ebuild:
  x86 stable wrt #234507

  12 Aug 2008; Ferris McCormick <fmccor@gentoo.org> freeciv-2.1.5.ebuild:
  Sparc stable --- Bug #234507 --- looks good.

*freeciv-2.1.5 (19 Jun 2008)

  19 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +freeciv-2.1.5.ebuild:
  version bump

*freeciv-2.1.4 (29 Apr 2008)
