@@ -1,5 +1,7 @@
 DIST freeciv-2.1.8.tar.bz2 29640362 RMD160 77c49538c9c456efac04959b57c95f2cc28a8a73 SHA1 6f532dbbb68e6ae3d126d867db5c8a8b6c1eacee SHA256 73079de7d671b418c7d6916a4a1cb784b81d3eb845e49400a458eaaad698f20b
+DIST freeciv-2.1.9.tar.bz2 29732845 RMD160 cbe12facbbf00a85410e1324eb6ba3f2351ea1f1 SHA1 01a3500a9d0f9d9c9b95b7c4b57f2446f671a900 SHA256 42ed80ced681f14d3e7a40bcf754bc1d4392d722e49173961829a68cc74baf38
 DIST stdsounds3.tar.gz 118278 RMD160 46bb5fef4b2d3acf9959b3228c962bdf6591ea09 SHA1 103d02a0702687fb038f5187a321f8074b4ebfb5 SHA256 a3cc2be93c006c3a9492349aa4552bf059e45efc94135f09241877c221ae1bfa
 EBUILD freeciv-2.1.8.ebuild 5250 RMD160 a6450a16465cffa155e3671ca76408787af32c9e SHA1 c8035a9e4285e00f73b72bd10a52b2989de07bd7 SHA256 ea96727896925bb7162692ae7d6f634f5229c3b33a231badfd57726ca2bb95a4
-MISC ChangeLog 12948 RMD160 f8fb8368dc8dbc590c7ab3e6e18c26521e5af551 SHA1 7dd729cb5d3549a974b531a2c45be25af815b77f SHA256 175f47adebde19ee23d3d84dd7ee243fc37929afedb92e28ebbfd1614b39fc1f
+EBUILD freeciv-2.1.9.ebuild 5194 RMD160 2e21c66f5f091f4482bf21a450c600e457abc077 SHA1 86e13fc73327e2f644cafde1c3037ff248631dee SHA256 9a4ebae953444df61d2746680810d25ba538ee3a45efc66556e5d45b5b71052a
+MISC ChangeLog 13076 RMD160 38de2c0e5d4c5e16af73888d7faa54895fc757a6 SHA1 72fadcf069fe96963d27eb9029d863e1301c7a31 SHA256 8519c41eb9f4586a58ec612bdf991d299ad2a51068992e65339a62929130a50d
 MISC metadata.xml 236 RMD160 da6a85d843183d3823ae8bcaf92cfd5bf61cc098 SHA1 ad6c23aa83441de75d14971aad4b6db5033a57e5 SHA256 c82561dfd15956bdf1e990623e951b31932fc782bdca7d94ea91dae35d88116d
