@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/freeciv
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.87 2009/03/21 17:09:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeciv/ChangeLog,v 1.88 2009/04/06 02:45:58 mr_bones_ Exp $
+
+*freeciv-2.1.9 (06 Apr 2009)
+
+  06 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  +freeciv-2.1.9.ebuild:
+  version bump
 
   21 Mar 2009; Raúl Porcel <armin76@gentoo.org> freeciv-2.1.8.ebuild:
   x86 stable, bug #261797
